importing gitub repo

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: mc2Rd
 Type: Package
 Title: Personal package with functions used for thesis
-Version: 0.0.0.9009
+Version: 0.0.0.9011
 Date: 2017-04-16
 Author: Matt Cole
 Maintainer: Matt Cole <mattcole1093@gmail.com>
@@ -14,12 +14,17 @@ Description: Functions that have accumulated involving factor analysis,
 License: MIT + file LICENSE
 Encoding: UTF-8
 LazyData: true
+Additional_repositories: https://github.com/swihart/lasagnar.git
 Depends: R (>= 3.1.0)
 Imports: 
-    MCMCpack
+    MCMCpack,
+    lasagnar,
+    dplyr,
+    RColorBrewer,
+    graphics,
+    psych
 Suggests: 
     testthat,
     FAtools,
-    devtools,
-    MCMCpack
+    devtools
 RoxygenNote: 6.0.1
