--- a/.travis.yml
+++ b/.travis.yml
@@ -5,3 +5,7 @@ r:
 cache: packages
 warnings_are_errors: true
 sudo: required
+r_packages:
+  - covr
+after_success:
+  - Rscript -e 'library(covr); codecov()'
