--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,8 @@ r:
 cache: packages
 warnings_are_errors: true
 sudo: required
+r_github_packages:
+  - swihart/lasagnar
 r_packages:
   - covr
 after_success:
